<resources>
    <string name="app_name">GitHub</string>
    <string name="name">Name</string>
    <string name="username">Username</string>
    <string name="location">:</string>
    <string name="locations">Location</string>
    <string name="company"> :</string>
    <string name="companies">Company</string>
    <string name="tab_followers">Followers</string>
    <string name="tab_following">Following</string>
    <string name="tab_repository">Repository</string>
    <string name="openingGit">Find your developer account here!</string>
    <string name="settings">Settings</string>
    <string name="logo">logo</string>
    <string name="todo">TODO</string>
    <string name="myfavorite">MyFavorite</string>
    <string name="language">Language</string>
    <string name="reminders">Add Reminders</string>
    <string name="reminder">Find your favorite account now!</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="repeat_alarm">Alarm is repeated</string>
    <string name="repeat_alarm_cancel">Repeat Alarm Nonactive</string>
    <string name="type_repeat_alarm">Repeating Alarm</string>
    <string name="time">09:00</string>
    <string name="massage_alarm">Github Reminder</string>
    <string name="add_widget">Add widget</string>
    <string name="github_widged">GitHub Widged</string>
    <string name="favorite_user_widged">My Favorite User</string>
    <string name="no_user_widged">No Favorite User</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="repository">Repository</string>

</resources>