<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/base"
    tools:context=".alarm.SettingsActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        app:title="Settings"
        app:titleTextColor="@color/white" />

    <Switch
        android:id="@+id/switch1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="25dp"
        android:text="@string/reminders"
        android:fontFamily="@font/ptsans_bold"
        android:textSize="18sp"
        android:textColor="@color/grey"
        android:textOff="@string/on"
        android:textOn="@string/off"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <Button
        android:id="@+id/btn_set_language"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="25dp"
        android:backgroundTint="@color/grey"
        android:fontFamily="@font/ptsans_regular"
        android:text="@string/language"
        android:textColor="@color/white"/>
</LinearLayout>