<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="10"
        android:stretchColumns="*">

        <StackView
            android:id="@+id/stack_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="8"
            android:loopViews="true" />

        <TextView
            android:id="@+id/tittle_text"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@color/grey"
            android:text="@string/github_widged"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:padding="4dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/fav_text"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@color/sky"
            android:text="@string/favorite_user_widged"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:textStyle="italic" />
    </LinearLayout>

    <TextView
        android:id="@+id/empty_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:background="@color/grey"
        android:text="@string/no_user_widged"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        android:visibility="gone" />

</FrameLayout>